--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1583,6 +1583,131 @@ main {
   text-align: center;
 }
 
+.mission__vision {
+  margin: 10rem 0;
+  overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .mission__vision .row {
+    --bs-gutter-x: 4rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .mission__vision .row {
+    --bs-gutter-x: 6rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mission__vision .row {
+    --bs-gutter-x: 8rem;
+  }
+}
+.mission__vision .row-gap {
+  margin: 10rem 0;
+}
+.mission__vision .section__content .title {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 3rem;
+}
+@media screen and (min-width: 576px) {
+  .mission__vision .section__content .title {
+    font-size: 3.6rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .mission__vision .section__content .title {
+    font-size: 4rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mission__vision .section__content .title {
+    font-size: 4.6rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mission__vision .section__content p {
+    max-width: 40rem;
+  }
+}
+.mission__vision .section__content p + p {
+  margin-top: 2rem;
+}
+@media screen and (max-width: 767px) {
+  .mission__vision .section__image {
+    margin-bottom: 2rem;
+  }
+}
+@media screen and (max-width: 767px) {
+  .mission__vision .section__image img {
+    max-width: 40rem;
+  }
+}
+
+.our__experts {
+  margin: 10rem 0;
+}
+.our__experts .team__member {
+  background-color: #172000;
+  position: relative;
+  padding: 3rem;
+  z-index: 1;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+.our__experts .team__member::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60%;
+  background: var(--color__theme);
+  z-index: -1;
+  border-radius: 0 0 0.4rem 0.4rem;
+  transition: all 0.5s ease;
+}
+.our__experts .team__member::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40%;
+  background: var(--color__theme);
+  z-index: -1;
+  opacity: 0;
+  border-radius: 0.4rem 0.4rem 0 0;
+  transition: all 0.5s ease;
+}
+.our__experts .team__member img {
+  width: 100%;
+  border-radius: 0.4rem;
+}
+.our__experts .team__member .description {
+  color: white;
+  margin-bottom: 2rem;
+}
+.our__experts .team__member .name {
+  font-size: 2.2rem;
+  font-weight: 600;
+  margin-bottom: 0.2rem;
+}
+.our__experts .team__member .desg {
+  font-size: 1.4rem;
+  opacity: 0.5;
+  font-weight: 300;
+}
+.our__experts .team__member:hover::before {
+  height: 40%;
+  opacity: 0;
+}
+.our__experts .team__member:hover::after {
+  height: 50%;
+  opacity: 1;
+}
+
 .project__details {
   margin: 10rem 0;
 }
